# ssocca

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ct.yml
examples/: totp.rs
src/: acquirer.rs  args.rs  logger.rs  main.rs
src/acquirer/: config.rs  runner.rs  scenario.rs
src/acquirer/scenario/: rule.rs
