[package]
name = "ssocca"
version = "0.4.3"
edition = "2021"
license = "MIT"
authors = ["Atsushi KAWASAKI <ak@xlix.org>"]
description = "SSO Credential Cookie Acquirer"

[dependencies]
anyhow = "1.0.68"
async-std = "1.12.0"
chromiumoxide = "0.4.0"
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"

[dev-dependencies]
rstest = "0.16.0"
