[package]
name = "ssocca"
version = "0.6.0-scenario.0.9"
edition = "2021"
license = "MIT"
authors = ["Atsushi KAWASAKI <ak@xlix.org>"]
description = "SSO Credential Cookie Acquirer"

[dependencies]
anyhow = "1.0.71"
async-std = "1.12.0"
chromiumoxide = "0.5.0"
clap = { version = "4.3.3", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.4"

[dev-dependencies]
rstest = "0.17.0"
